# deepagent-demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  quick_sort_verify.py
app/: __init__.py  config.py
app/agents/: __init__.py  research.py
app/cli/: __init__.py  app.py  parser.py
app/models/: __init__.py  resolver.py
app/sandbox/: __init__.py  docker_backend.py  docker_user_runtime.py  factory.py
app/streaming/: __init__.py  console.py
app/tools/: __init__.py  tavily.py
